#  This file is part of DirectFB-examples.
#
#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:
#
#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.
#
#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

examplesdata = [
  'apple-red.dfiff',
  'background.dfiff',
  'bbb.dfvff',
  'biglogo.dfiff',
  'card.dfiff',
  'colorkeyed.dfiff',
  'cursor_red.dfiff',
  'cursor_yellow.dfiff',
  'decker.dgiff',
  'decker_argb.dgiff',
  'destination_mask.dfiff',
  'dfblogo.dfiff',
  'fish.dfiff',
  'gnome-applets.dfiff',
  'gnome-calendar.dfiff',
  'gnome-foot.dfiff',
  'gnome-gimp.dfiff',
  'gnome-gmush.dfiff',
  'gnome-gsame.dfiff',
  'gnu-keys.dfiff',
  'grid.dfiff',
  'intro.dfiff',
  'joystick.dfiff',
  'keys.dfiff',
  'laden_bike.dfiff',
  'mask.dfiff',
  'melted.dfiff',
  'meter.dfiff',
  'mouse.dfiff',
  'panel.dfiff',
  'rose.dfiff',
  'sacred_heart.dfiff',
  'smokey_light.dfiff',
  'star1.dfiff',
  'star2.dfiff',
  'star3.dfiff',
  'star4.dfiff',
  'swirl.dfiff',
  'texture.dfiff',
  'tux.dfiff',
  'tux_alpha.dfiff',
  'wood_andi.dfiff'
]

install_data(examplesdata, install_dir: examplesdatadir)
